primer ejercicio mal

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-asas
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>MIDEMA</title>
+</head>
+<body>
+    <header>
+        <h1>MIDEMA</h1>
+    </header>
+    <main>
+        Nombre: <input type="text" id="nombre">
+        Fecha de nacimiento: <input type="text" id="fecha">
+        <button onclick="ejercicio1()">Calcular edad</button>
+        <div id="resultado">
+            
+        </div>
+    </main>
+    <footer>
+        © MIDEMA
+        <p>Tus favs IARAAAAAAAAAAAAAAA</p>
+    </footer>
+    <script src="js/utils.js"></script>
+    <script src="js/ejercicios.js"></script>
+</body>
+</html>
