--- a/index.html
+++ b/index.html
@@ -11,11 +11,24 @@
         <h1>MIDEMA</h1>
     </header>
     <main>
-        Nombre: <input type="text" id="nombre">
-        Fecha de nacimiento: <input type="text" id="fecha">
-        <button onclick="ejercicio1()">Calcular edad</button>
+        <div id="menu">
+            <button onclick="ej1pc()">Ejercicio 1 - Calculadora de edad</button>
+            <button onclick="ej2pc()">Ejercicio 2 - Tirando fruta</button>
+            <button onclick="ej3pc()">Ejercicio 3 - Comparando datos y tipos</button>
+            <button onclick="ej4pc()">Ejercicio 4 - Yo objeto</button>
+            <button onclick="ej5pc()">Ejercicio 5 - Doble de elementos</button>
+            <button onclick="ej6pc()">Ejercicio 6 - Triángulo de asteriscos</button>
+            <button onclick="ej7pc()">Ejercicio 7 - Nombres con 'A'</button>
+            <button onclick="ej8pc()">Ejercicio 8 - Reemplazar palabras</button>
+            <button onclick="ej9pc()">Ejercicio 9 - Cortar texto</button>
+            <button onclick="ej10pc()">Ejercicio 10 - String con separador</button>
+            <button onclick="ej11pc()">Ejercicio 11 - Calculadora de recaudación</button>
+        </div>
+        <div id="opciones">
+
+        </div>
         <div id="resultado">
-            
+
         </div>
     </main>
     <footer>
