style.css, chat love you!!!

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <button onclick="ej11pc()">Ejercicio 11 - Calculadora de recaudación</button>
         </div>
         <div id="opciones">
-
+            <h1>Ejercicio</h1>
         </div>
         <div id="resultado">
-
+            <h1>Resultado</h1>
         </div>
     </main>
     <footer>
